@@ -58,11 +58,14 @@ import android.net.wifi.WifiNetworkSpecifier;
 import android.net.wifi.WifiNetworkSuggestion;
 import android.net.wifi.WifiScanner;
 import android.os.Binder;
+import android.os.Handler;
 import android.os.PatternMatcher;
 import android.os.Process;
+import android.os.test.TestLooper;
 
 import androidx.test.filters.SmallTest;
 
+import com.android.modules.utils.ParceledListSlice;
 import com.android.modules.utils.build.SdkLevel;
 import com.android.server.wifi.coex.CoexManager;
 
@@ -76,6 +79,7 @@ import org.mockito.MockitoAnnotations;
 import java.io.FileDescriptor;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * Unit tests for {@link com.android.server.wifi.WifiShellCommand}.
@@ -101,16 +105,17 @@ public class WifiShellCommandTest extends WifiBaseTest {
     @Mock WifiCarrierInfoManager mWifiCarrierInfoManager;
     @Mock WifiNetworkFactory mWifiNetworkFactory;
     @Mock WifiGlobals mWifiGlobals;
-    @Mock WifiThreadRunner mWifiThreadRunner;
     @Mock ScanRequestProxy mScanRequestProxy;
     @Mock WifiDiagnostics mWifiDiagnostics;
     @Mock DeviceConfigFacade mDeviceConfig;
     @Mock WifiScanner mWifiScanner;
     WifiShellCommand mWifiShellCommand;
+    TestLooper mLooper;
 
     @Before
     public void setUp() throws Exception {
         MockitoAnnotations.initMocks(this);
+        mLooper = new TestLooper();
 
         when(mWifiInjector.getActiveModeWarden()).thenReturn(mActiveModeWarden);
         when(mActiveModeWarden.getPrimaryClientModeManager()).thenReturn(mPrimaryClientModeManager);
@@ -135,7 +140,7 @@ public class WifiShellCommandTest extends WifiBaseTest {
         when(mScanRequestProxy.getScanResults()).thenReturn(new ArrayList<>());
 
         mWifiShellCommand = new WifiShellCommand(mWifiInjector, mWifiService, mContext,
-                mWifiGlobals, mWifiThreadRunner);
+                mWifiGlobals, new WifiThreadRunner(new Handler(mLooper.getLooper())));
 
         // by default emulate shell uid.
         BinderUtil.setUid(Process.SHELL_UID);
@@ -312,6 +317,7 @@ public class WifiShellCommandTest extends WifiBaseTest {
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"network-suggestions-set-user-approved", TEST_PACKAGE, "yes"});
+        mLooper.dispatchAll();
         verify(mWifiNetworkSuggestionsManager, never()).setHasUserApprovedForApp(
                 anyBoolean(), anyInt(), anyString());
         assertFalse(mWifiShellCommand.getErrPrintWriter().toString().isEmpty());
@@ -321,12 +327,14 @@ public class WifiShellCommandTest extends WifiBaseTest {
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"network-suggestions-set-user-approved", TEST_PACKAGE, "yes"});
+        mLooper.dispatchAll();
         verify(mWifiNetworkSuggestionsManager).setHasUserApprovedForApp(
                 eq(true), anyInt(), eq(TEST_PACKAGE));
 
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"network-suggestions-set-user-approved", TEST_PACKAGE, "no"});
+        mLooper.dispatchAll();
         verify(mWifiNetworkSuggestionsManager).setHasUserApprovedForApp(
                 eq(false), anyInt(), eq(TEST_PACKAGE));
     }
@@ -598,9 +606,9 @@ public class WifiShellCommandTest extends WifiBaseTest {
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-suggestion", "ssid1234", "open", "-u"});
         verify(mWifiService).addNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isUntrusted());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isUntrusted());
         }), eq(SHELL_PACKAGE_NAME), any());
         verify(mConnectivityManager).requestNetwork(argThat(nR -> {
             return (nR.hasTransport(TRANSPORT_WIFI))
@@ -608,18 +616,18 @@ public class WifiShellCommandTest extends WifiBaseTest {
         }), any(ConnectivityManager.NetworkCallback.class));
 
         when(mWifiService.getNetworkSuggestions(any()))
-                .thenReturn(Arrays.asList(
+                .thenReturn(new ParceledListSlice<>(List.of(
                         new WifiNetworkSuggestion.Builder()
                                 .setSsid("ssid1234")
                                 .setUntrusted(true)
-                                .build()));
+                                .build())));
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"remove-suggestion", "ssid1234"});
         verify(mWifiService).removeNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isUntrusted());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isUntrusted());
         }), eq(SHELL_PACKAGE_NAME), eq(ACTION_REMOVE_SUGGESTION_DISCONNECT));
         verify(mConnectivityManager).unregisterNetworkCallback(
                 any(ConnectivityManager.NetworkCallback.class));
@@ -633,9 +641,9 @@ public class WifiShellCommandTest extends WifiBaseTest {
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-suggestion", "ssid1234", "open", "-o"});
         verify(mWifiService).addNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isOemPaid());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isOemPaid());
         }), eq(SHELL_PACKAGE_NAME), any());
         verify(mConnectivityManager).requestNetwork(argThat(nR -> {
             return (nR.hasTransport(TRANSPORT_WIFI))
@@ -643,18 +651,18 @@ public class WifiShellCommandTest extends WifiBaseTest {
         }), any(ConnectivityManager.NetworkCallback.class));
 
         when(mWifiService.getNetworkSuggestions(any()))
-                .thenReturn(Arrays.asList(
+                .thenReturn(new ParceledListSlice<>(List.of(
                         new WifiNetworkSuggestion.Builder()
                                 .setSsid("ssid1234")
                                 .setOemPaid(true)
-                                .build()));
+                                .build())));
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"remove-suggestion", "ssid1234"});
         verify(mWifiService).removeNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isOemPaid());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isOemPaid());
         }), eq(SHELL_PACKAGE_NAME), eq(ACTION_REMOVE_SUGGESTION_DISCONNECT));
         verify(mConnectivityManager).unregisterNetworkCallback(
                 any(ConnectivityManager.NetworkCallback.class));
@@ -668,9 +676,9 @@ public class WifiShellCommandTest extends WifiBaseTest {
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-suggestion", "ssid1234", "open", "-p"});
         verify(mWifiService).addNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isOemPrivate());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isOemPrivate());
         }), eq(SHELL_PACKAGE_NAME), any());
         verify(mConnectivityManager).requestNetwork(argThat(nR -> {
             return (nR.hasTransport(TRANSPORT_WIFI))
@@ -678,18 +686,18 @@ public class WifiShellCommandTest extends WifiBaseTest {
         }), any(ConnectivityManager.NetworkCallback.class));
 
         when(mWifiService.getNetworkSuggestions(any()))
-                .thenReturn(Arrays.asList(
+                .thenReturn(new ParceledListSlice<>(List.of(
                         new WifiNetworkSuggestion.Builder()
                                 .setSsid("ssid1234")
                                 .setOemPrivate(true)
-                                .build()));
+                                .build())));
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"remove-suggestion", "ssid1234"});
         verify(mWifiService).removeNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isOemPrivate());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isOemPrivate());
         }), eq(SHELL_PACKAGE_NAME), eq(ACTION_REMOVE_SUGGESTION_DISCONNECT));
         verify(mConnectivityManager).unregisterNetworkCallback(
                 any(ConnectivityManager.NetworkCallback.class));
@@ -702,9 +710,9 @@ public class WifiShellCommandTest extends WifiBaseTest {
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-suggestion", "ssid1234", "open"});
         verify(mWifiService).addNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).getWifiConfiguration().macRandomizationSetting
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).getWifiConfiguration().macRandomizationSetting
                     == WifiConfiguration.RANDOMIZATION_PERSISTENT);
         }), eq(SHELL_PACKAGE_NAME), any());
 
@@ -714,9 +722,9 @@ public class WifiShellCommandTest extends WifiBaseTest {
                     new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                     new String[]{"add-suggestion", "ssid1234", "open", "-r"});
             verify(mWifiService).addNetworkSuggestions(argThat(sL -> {
-                return (sL.size() == 1)
-                        && (sL.get(0).getSsid().equals("ssid1234"))
-                        && (sL.get(0).getWifiConfiguration().macRandomizationSetting
+                return (sL.getList().size() == 1)
+                        && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                        && (sL.getList().get(0).getWifiConfiguration().macRandomizationSetting
                         == WifiConfiguration.RANDOMIZATION_NON_PERSISTENT);
             }), eq(SHELL_PACKAGE_NAME), any());
         }
@@ -904,6 +912,7 @@ public class WifiShellCommandTest extends WifiBaseTest {
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-request", testSsid, "open"});
+        mLooper.dispatchAll();
         verify(mConnectivityManager).requestNetwork(eq(
                 new NetworkRequest.Builder()
                         .addTransportType(TRANSPORT_WIFI)
@@ -918,6 +927,7 @@ public class WifiShellCommandTest extends WifiBaseTest {
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-request", testSsid, "owe"});
+        mLooper.dispatchAll();
         verify(mConnectivityManager).requestNetwork(eq(
                 new NetworkRequest.Builder()
                         .addTransportType(TRANSPORT_WIFI)
@@ -933,6 +943,7 @@ public class WifiShellCommandTest extends WifiBaseTest {
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-request", testSsid, "wpa2", testPassphrase});
+        mLooper.dispatchAll();
         verify(mConnectivityManager).requestNetwork(eq(
                 new NetworkRequest.Builder()
                         .addTransportType(TRANSPORT_WIFI)
@@ -948,6 +959,7 @@ public class WifiShellCommandTest extends WifiBaseTest {
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-request", testSsid, "wpa3", testPassphrase});
+        mLooper.dispatchAll();
         verify(mConnectivityManager).requestNetwork(eq(
                 new NetworkRequest.Builder()
                         .addTransportType(TRANSPORT_WIFI)
@@ -963,6 +975,7 @@ public class WifiShellCommandTest extends WifiBaseTest {
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-request", testSsid, "open", "-b", testBssid});
+        mLooper.dispatchAll();
         verify(mConnectivityManager).requestNetwork(eq(
                 new NetworkRequest.Builder()
                         .addTransportType(TRANSPORT_WIFI)
@@ -978,6 +991,7 @@ public class WifiShellCommandTest extends WifiBaseTest {
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-request", "-g", testSsid, "open"});
+        mLooper.dispatchAll();
         verify(mConnectivityManager).requestNetwork(eq(
                 new NetworkRequest.Builder()
                         .addTransportType(TRANSPORT_WIFI)
